# tas_simulations

./: .gitignore  README.md
planning_and_control/trajectory_planning/local/: placeholder
planning_and_control/vehicle_control/tas_control/: CMakeLists.txt  package.xml
planning_and_control/vehicle_control/tas_control/scripts/: tas_move_base_to_arduino.py
project_files/: README.md
project_files/lane_planner/: CMakeLists.txt  Doxyfile  README.md  lane_planner_plugin.xml  package.xml
project_files/lane_planner/cfg/: LaneGlobalPlanner.cfg
project_files/lane_planner/config/: debug_trajectories.yaml  lane_global_planner_params.yaml  laser_checker_params.yaml
project_files/lane_planner/include/lane_planner/: decision_helper.h  lane_global_planner.h  lane_global_planner_ros.h  lane_planner_types.h  trajectory_helper.h
project_files/lane_planner/launch/: lane_planner.launch  wii_control.launch
project_files/lane_planner/msg/: Car_scan.msg
project_files/lane_planner/scripts/: LaserChecker.py  WiiControllerSim.py  ZoneVisualisation.py
project_files/lane_planner/src/: lane_global_planner_ros.cpp
project_files/lane_planner/src/lib/: decision_helper.cpp  lane_global_planner.cpp  trajectory_helper.cpp
project_files/lane_planner/test/trajectory_environment/: launch.test  tests.cpp
project_files/lane_planner/test/trajectory_helper/: launch.test  tests.cpp
project_files/lane_planner_bringup/: CMakeLists.txt  README.md  package.xml
project_files/lane_planner_bringup/config/: demo.perspective  demo_mpc.rviz  demo_teb.rviz
project_files/lane_planner_bringup/launch/: demo1.launch  demo2.launch  demo3.launch  demo4.launch  demo5.launch  demo6.launch  demo7.launch  demo8.launch  demo_core.launch  demo_visualizer.launch
project_files/lane_planner_environment/: CMakeLists.txt  README.md  package.xml
project_files/lane_planner_environment/config/: obstacles_config.yaml  trajectory_points.yaml
project_files/lane_planner_environment/gazebo/models/box/: model.sdf
project_files/lane_planner_environment/gazebo/models/construction_barrel/: model.sdf
project_files/lane_planner_environment/gazebo/models/guardrail_inner_curve/: model.config  model.sdf
project_files/lane_planner_environment/gazebo/models/guardrail_inner_curve/meshes/: guardrail_inner_curve.dae
project_files/lane_planner_environment/gazebo/models/guardrail_outer_curve/: model.config  model.sdf
project_files/lane_planner_environment/gazebo/models/guardrail_outer_curve/meshes/: guardrail_outer_curve.dae
project_files/lane_planner_environment/gazebo/models/guardrail_straight/: model.config  model.sdf
project_files/lane_planner_environment/gazebo/models/guardrail_straight/meshes/: guardrail_straight.dae
project_files/lane_planner_environment/gazebo/models/highway/: model.config  model.sdf
project_files/lane_planner_environment/gazebo/models/highway/materials/scripts/: highway.material
project_files/lane_planner_environment/gazebo/models/pickup/: model.sdf
project_files/lane_planner_environment/gazebo/models/post/: model.config  model.sdf
project_files/lane_planner_environment/gazebo/models/post/meshes/: model.dae  model_adapted.dae
project_files/lane_planner_environment/gazebo/worlds/: empty.world  highway.world  highway_backup.world
project_files/lane_planner_environment/launch/: environment.launch  navigation.launch  obstacle.launch  simulation.launch
project_files/lane_planner_environment/launch/config/map_server/: my_map.pgm  my_map.yaml  my_map_1.pgm  my_map_1.xcf  my_map_safe.pgm
project_files/lane_planner_environment/scripts/: CatmullSpline.py  generate_trajectories.py  obstacles_generator.py
project_files/lane_planner_helpers/: README.md
project_files/lane_planner_helpers/LIDAR_simulation/: Curved_Zones.ipynb  Example_xy.csv  README.md  Square_Zones.ipynb  Zone_Analysis.ipynb  lidar.m
project_files/lane_planner_helpers/highway_generator/: CMakeLists.txt  README.md  package.xml
project_files/lane_planner_helpers/highway_generator/config/: guardrail_inner_curve.yaml  guardrail_outer_curve.yaml  guardrail_straight.yaml  post.yaml
project_files/lane_planner_helpers/highway_generator/scripts/: generate_highway.m  spawn_gazebo_objects.py
project_files/lane_planner_helpers/trajectory_simulation/: README.md  interpolation_methods.ipynb  path_creator.py  requirements.txt  trajectory_intersection.ipynb
project_files/lane_planner_helpers/zone_visualization/: ZoneVisualization.ipynb
tas_hardware_control/actuators/: Placeholder
tas_hardware_control/arduino/: README.md
tas_hardware_control/arduino/Arduino driver/TAS_controller/: TAS_controller.ino  remote_ctrl.ino  stepper.ino
tas_hardware_control/arduino/Arduino driver/TAS_controller_old/: TAS_controller.ino
tas_hardware_control/sensors/ira_laser_tools/src/: laserscan_multi_merger.cpp
tas_hardware_control/sensors/xsens_ros_mti_driver/: README.txt
tas_operation/: CMakeLists.txt  package.xml
tas_operation/launch/: car.launch  hardware_16.launch  move_base.launch  move_base_gmap.launch
tas_operation/scripts/: simple_navigation_goals_node.py
tas_sim/: CMakeLists.txt  README.md  package.xml
tas_sim/config/: gazebo_controller.yaml  test_config.yaml  test_trajectories.yaml
tas_sim/gazebo/models/highway/: highway.config  highway.sdf
tas_sim/launch/: basement.launch  car.launch  hardware_16.launch  move_base.launch  move_base_HW_params.launch  navigation.launch  rviz.launch  slam.launch  tas_car.launch
tas_sim/launch/config/map_server/: LSR_N5.yaml  simMap.yaml
tas_sim/launch/config/move_base/: base_global_planner_params.yaml  base_mpc_local_planner_params.yaml  base_teb_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
tas_sim/launch/config/rviz/: default.rviz
tas_sim/src/tas_sim/: ArduinoSim.py  AutonomousNodeSim.py  GazeboVis.py  WiiControllerSim.py  ordered_launch.py  ordered_launch_GazeboVis.py  test_sim.py
tas_sim/urdf/: tas_car.urdf  tas_car.urdf.xacro  tas_car_macros.xacro  tas_car_properties.xacro
(+14 files in other folders)
