<?xml version="1.0"?>
<package format="2">
  <name>tas_sim</name>
  <version>1.0.0</version>
  <description>The tas_sim package</description>

  <maintainer email="Jiangnan@todo.todo">Jiangnan </maintainer>

  <license>BSD</license>

  <author email="martin@todo.todo">Martin </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>